Task5/admin_frontend_allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-frontend-allow
spec:
  podSelector:
    matchLabels:
      role: admin-front-end
  policyTypes:
    - Ingress
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: admin-back-end-api
